--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -10,7 +10,7 @@
   "an11.2:3.3": "To naturalne, mnisi, że w kimś zadowolonym pojawia się radosne uniesienie.",
   "an11.2:4.1": "Mnisi, w kimś, kogo umysł przepełniony radosnym uniesieniem nie musi dokonać intencji:",
   "an11.2:4.2": "Niech pojawi się we mnie uspokojenie w ciele.",
-  "an11.2:4.3": "To naturalne, mnisi, że w kimś, kogo umysł przepełniony radosnym uniesieniem pojawia się uspokojenie w ciele.",
+  "an11.2:4.3": "To naturalne, mnisi, że w kimś, kogo umysł przepełniony radosnym uniesieniem, tego ciało się uspokaja.",
   "an11.2:5.1": "Mnisi, w kimś, kogo ciało jest uspokojone, nie musi dokonać intencji:",
   "an11.2:5.2": "Niech odczuwam błogość.",
   "an11.2:7.2": "Obym znał i widział rzeczy takimi, jakie są naprawdę."
