--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -13,5 +13,6 @@
   "an11.2:4.3": "To naturalne, mnisi, że w kimś, kogo umysł przepełniony radosnym uniesieniem, tego ciało się uspokaja.",
   "an11.2:5.1": "Mnisi, w kimś, kogo ciało jest uspokojone, nie musi dokonać intencji:",
   "an11.2:5.2": "Niech odczuwam błogość.",
+  "an11.2:5.3": "To naturalne, mnisi, że w kimś, kogo ciało jest uspokojone odczuwa błogość.",
   "an11.2:7.2": "Obym znał i widział rzeczy takimi, jakie są naprawdę."
 }
