--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "sn44.2:16.22": "oder als von Entscheidungen getrennt … ",
   "sn44.2:16.23": "als im Bewusstsein … ",
   "sn44.2:16.25": "oder als vom Bewusstsein getrennt?“ ",
-  "sn44.2:16.26": "„Nein, Herr.“ "
+  "sn44.2:16.26": "„Nein, Herr.“ ",
+  "sn44.2:17.1": "„Was denkst du, Anurādha? "
 }
