--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn44.2:16.25": "oder als vom Bewusstsein getrennt?“ ",
   "sn44.2:16.26": "„Nein, Herr.“ ",
   "sn44.2:17.1": "„Was denkst du, Anurādha? ",
+  "sn44.2:17.2": "Siehst du den Klargewordenen als jemanden an, der Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein besitzt?“ ",
   "sn44.2:17.4": "„Was denkst du, Anurādha? "
 }
