--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -69,5 +69,6 @@
   "sn44.2:17.2": "Siehst du den Klargewordenen als jemanden an, der Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein besitzt?“ ",
   "sn44.2:17.3": "„Nein, Herr.“ ",
   "sn44.2:17.4": "„Was denkst du, Anurādha? ",
-  "sn44.2:17.5": "Siehst du den Klargewordenen als jemanden an, der ohne Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein ist?“ "
+  "sn44.2:17.5": "Siehst du den Klargewordenen als jemanden an, der ohne Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein ist?“ ",
+  "sn44.2:17.6": "„Nein, Herr.“ "
 }
