--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.2_translation-de-sabbamitta.json
@@ -71,5 +71,6 @@
   "sn44.2:17.4": "„Was denkst du, Anurādha? ",
   "sn44.2:17.5": "Siehst du den Klargewordenen als jemanden an, der ohne Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein ist?“ ",
   "sn44.2:17.6": "„Nein, Herr.“ ",
-  "sn44.2:17.7": "„In diesem Fall, Anurādha, da du den Klargewordenen in diesem Leben nicht als Tatsache annimmst, ist es da angemessen, zu erklären: "
+  "sn44.2:17.7": "„In diesem Fall, Anurādha, da du den Klargewordenen in diesem Leben nicht als Tatsache annimmst, ist es da angemessen, zu erklären: ",
+  "sn44.2:17.8": "‚Werte Freunde, wenn ein Klargewordener einen Klargewordenen beschreibt – einen unübertrefflichen Menschen, den höchsten Menschen, der den höchsten Punkt erreicht hat –, dann beschreibt er ihn anders als auf diese vier Arten: "
 }
