--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -754,7 +754,7 @@
   "pli-tv-kd14:14.6.7": "There are offenses that originate from speech and the mind, but not from the body. ",
   "pli-tv-kd14:14.6.8": "There are offenses that originate from the body, speech, and the mind. ",
   "pli-tv-kd14:14.7.1": "(2d) What’s the root of legal issues arising from business? ",
-  "pli-tv-kd14:14.7.2": "There is one root of legal issues arising from business: ",
+  "pli-tv-kd14:14.7.2": "There’s one root of legal issues arising from business: ",
   "pli-tv-kd14:14.7.3": "the Sangha. ",
   "pli-tv-kd14:14.8.1": "(3a) Is a legal issue arising from a dispute wholesome, unwholesome, or indeterminate? ",
   "pli-tv-kd14:14.8.2": "A legal issue arising from a dispute may be wholesome, unwholesome, or indeterminate. ",
