--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -758,7 +758,7 @@
   "pli-tv-kd14:14.7.3": "the Sangha. ",
   "pli-tv-kd14:14.8.1": "(3a) Is a legal issue arising from a dispute wholesome, unwholesome, or indeterminate? ",
   "pli-tv-kd14:14.8.2": "A legal issue arising from a dispute may be wholesome, unwholesome, or indeterminate. ",
-  "pli-tv-kd14:14.8.3": "What is a wholesome legal issue arising from a dispute? ",
+  "pli-tv-kd14:14.8.3": "What’s a wholesome legal issue arising from a dispute? ",
   "pli-tv-kd14:14.8.4": "It may be that monks dispute with a wholesome mind, saying, ",
   "pli-tv-kd14:14.8.5": "‘This is the Teaching’, ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.8.6": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
