--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -832,9 +832,9 @@
   "pli-tv-kd14:14.12.14": "this is a legal issue that isn’t also a dispute. ",
   "pli-tv-kd14:14.12.15": "How’s there a legal issue that’s also a dispute? ",
   "pli-tv-kd14:14.12.16": "A legal issue arising from a dispute is a legal issue and also a dispute. ",
-  "pli-tv-kd14:14.13.1": "(4b) Are there accusations that are a legal issue arising from an accusation? Are there accusations that are not a legal issue? Are there legal issues that are not an accusation? Are there legal issues that are also an accusation? ",
-  "pli-tv-kd14:14.13.2": "There may be accusations that are a legal issue arising from an accusation; there may be accusations that are not a legal issue; there may be legal issues that are not an accusation; there may legal issues that are also an accusation. ",
-  "pli-tv-kd14:14.13.3": "How is there an accusation that is a legal issue arising from an accusation? ",
+  "pli-tv-kd14:14.13.1": "(4b) Are there accusations that are also legal issues arising from an accusation? Are there accusations that aren’t also legal issues? Are there legal issues that aren’t also accusations? Are there legal issues that are also accusations? ",
+  "pli-tv-kd14:14.13.2": "There are accusations that are also legal issues arising from an accusation. There are accusations that aren’t also legal issues. There are legal issues that aren’t also accusations. There are legal issues that are also accusations. ",
+  "pli-tv-kd14:14.13.3": "How’s there an accusation that’s also a legal issue arising from an accusation? ",
   "pli-tv-kd14:14.13.4": "It may be that monks accuse a monk ",
   "pli-tv-kd14:14.13.5": "of failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
   "pli-tv-kd14:14.13.6": "In regard to this, whatever there is of accusation, accusing, allegation, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation—",
