--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.87:4.1": "Was denkst du, Vakkali? ",
   "sn22.87:4.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.87:4.3": "„Unbeständig, Herr.“ ",
-  "sn22.87:4.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ "
+  "sn22.87:4.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
+  "sn22.87:4.5": "„Leiden, Herr.“ "
 }
