--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn22.87:4.3": "„Unbeständig, Herr.“ ",
   "sn22.87:4.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
   "sn22.87:4.5": "„Leiden, Herr.“ ",
-  "sn22.87:4.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: "
+  "sn22.87:4.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
+  "sn22.87:4.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
