--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "sn22.83:4.2": "Ist Form beständig oder unbeständig?‘ ",
   "sn22.83:4.3": "‚Unbeständig, werter Freund.‘ ",
   "sn22.83:4.4": "‚Ist Gefühl … ",
-  "sn22.83:4.5": "‚Ist Wahrnehmung …‘ … ",
+  "sn22.83:4.5": "Ist Wahrnehmung … ",
   "sn22.83:4.6": "‚Sind Entscheidungen …‘ … ",
   "sn22.83:4.7": "‚Ist Bewusstsein beständig oder unbeständig?‘ ",
   "sn22.83:4.8": "‚Unbeständig, werter Freund.‘ ",
