--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -42,7 +42,7 @@
   "sn22.84:8.4": "Was denkst du, Tissa? ",
   "sn22.84:8.5": "Ist Form beständig oder unbeständig?“ ",
   "sn22.84:8.6": "„Unbeständig, Herr.“ ",
-  "sn22.84:8.7": "„Ist Gefühl …“ … ",
+  "sn22.84:8.7": "„Ist Gefühl … ",
   "sn22.84:8.8": "„Ist Wahrnehmung …“ … ",
   "sn22.84:8.9": "„Sind Entscheidungen …“ … ",
   "sn22.84:8.10": "„Ist Bewusstsein beständig oder unbeständig?“ ",
