--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -39,6 +39,6 @@
   "sn22.87:4.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.87:4.8": "„Nein, Herr.“ ",
   "sn22.87:4.9": "„Ist Gefühl … ",
-  "sn22.87:4.10": "Wahrnehmung … ",
+  "sn22.87:4.10": "Ist Wahrnehmung … ",
   "sn22.87:4.11": "Sind Entscheidungen … "
 }
