--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.87:4.10": "Ist Wahrnehmung … ",
   "sn22.87:4.11": "Sind Entscheidungen … ",
   "sn22.87:4.12": "Ist Bewusstsein beständig oder unbeständig?“ ",
-  "sn22.87:4.13": "„Unbeständig, Herr.“ … "
+  "sn22.87:4.13": "„Unbeständig, Herr.“ … ",
+  "sn22.87:4.16": "„Daher solltest du jegliche Art … sehen … "
 }
