--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "sn22.87:4.16": "„Daher solltest du jegliche Art … sehen … ",
   "sn22.87:4.17": "Wenn er das sieht … ",
   "sn22.87:4.18": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
-  "sn22.87:5.1": "Und nachdem der Buddha dem Ehrwürdigen Vakkali diesen Rat erteilt hatte, erhob er sich von seinem Sitz und ging zur Geierkuppe. "
+  "sn22.87:5.1": "Und nachdem der Buddha dem Ehrwürdigen Vakkali diesen Rat erteilt hatte, erhob er sich von seinem Sitz und ging zur Geierkuppe. ",
+  "sn22.87:5.2": "Da wandte sich der Ehrwürdige an seine Pfleger: "
 }
