--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -48,6 +48,6 @@
   "sn22.87:4.18": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
   "sn22.87:5.1": "Und nachdem der Buddha dem Ehrwürdigen Vakkali diesen Rat erteilt hatte, erhob er sich von seinem Sitz und ging zur Geierkuppe. ",
   "sn22.87:5.2": "Da wandte sich der Ehrwürdige an seine Pfleger: ",
-  "sn22.87:5.3": "„Kommt, werte Freunde, nehmt meine Liege und tragt mich zum Schwarzen Felsen an den Hängen des Isigili. ",
+  "sn22.87:5.3": "„Kommt, werte Freunde, hebt meine Liege auf und tragt mich zum Schwarzen Felsen an den Hängen des Isigili. ",
   "sn22.87:5.4": "Wie könnte es angehen, dass jemand wie ich in einer bewohnten Gegend stirbt?“ "
 }
