--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn22.87:5.2": "Da wandte sich der Ehrwürdige an seine Pfleger: ",
   "sn22.87:5.3": "„Kommt, werte Freunde, hebt meine Liege auf und tragt mich zum Schwarzen Felsen an den Hängen des Isigili. ",
   "sn22.87:5.4": "Wie könnte es angehen, dass jemand wie ich in einer bewohnten Gegend stirbt?“ ",
-  "sn22.87:5.5": "„Ja, werter Freund“, antworteten diese Mönche. Und sie hoben die Liege des Ehrwürdigen Vakkali auf und trugen ihn zum Schwarzen Felsen. "
+  "sn22.87:5.5": "„Ja, werter Freund“, antworteten diese Mönche. Und sie hoben die Liege des Ehrwürdigen Vakkali auf und trugen ihn zum Schwarzen Felsen. ",
+  "sn22.87:5.6": "Der Buddha verbrachte inzwischen den Rest der Nacht und des Tages auf der Geierkuppe. "
 }
