--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "sn22.87:5.6": "Der Buddha verbrachte inzwischen den Rest der Nacht und des Tages auf der Geierkuppe. ",
   "sn22.87:5.7": "Da kamen spät in der Nacht zwei Gottheiten, die mit ihrer wunderbaren Schönheit die Geierkuppe weithin erhellten, zum Buddha, verbeugten sich und stellten sich zur Seite hin. ",
   "sn22.87:5.8": "Eine von ihnen sagte zu ihm: ",
-  "sn22.87:5.9": "„Herr, der Mönch Vakkali ist zur Befreiung entschlossen!“ "
+  "sn22.87:5.9": "„Herr, der Mönch Vakkali ist zur Befreiung entschlossen!“ ",
+  "sn22.87:5.10": "Die andere Gottheit sagte zum Buddha: "
 }
