--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "sn22.87:5.7": "Da kamen spät in der Nacht zwei Gottheiten, die mit ihrer wunderbaren Schönheit die Geierkuppe weithin erhellten, zum Buddha, verbeugten sich und stellten sich zur Seite hin. ",
   "sn22.87:5.8": "Eine von ihnen sagte zu ihm: ",
   "sn22.87:5.9": "„Herr, der Mönch Vakkali ist zur Befreiung entschlossen!“ ",
-  "sn22.87:5.10": "Die andere Gottheit sagte zum Buddha: "
+  "sn22.87:5.10": "Die andere Gottheit sagte zum Buddha: ",
+  "sn22.87:5.11": "„Er wird gewiss gut befreit sein!“ "
 }
