--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "sn22.87:5.13": "Dann verbeugten sie sich, umrundeten den Buddha respektvoll, die rechte Seite ihm zugewandt, und verschwanden eben dort. ",
   "sn22.87:6.1": "Als dann die Nacht vorüber war, wandte sich der Buddha an die Mönche und Nonnen: ",
   "sn22.87:6.2": "„Kommt, Mönche und Nonnen, geht zu dem Mönch Vakkali und sagt ihm: ",
-  "sn22.87:7.1": "‚Höre, Vakkali, was der Buddha und zwei Gottheiten gesagt haben: "
+  "sn22.87:7.1": "‚Höre, Vakkali, was der Buddha und zwei Gottheiten gesagt haben: ",
+  "sn22.87:7.2": "Spät in der letzten Nacht kamen zwei Gottheiten, die mit ihrer wunderbaren Schönheit die Geierkuppe weithin erhellten, zum Buddha, verbeugten sich und stellten sich zur Seite hin. "
 }
