--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -69,5 +69,6 @@
   "sn22.87:7.6": "„Er wird gewiss gut befreit sein!“ ",
   "sn22.87:7.7": "Und der Buddha sagt: ",
   "sn22.87:7.8": "„Fürchte dich nicht, Vakkali, ",
-  "sn22.87:7.9": "fürchte dich nicht! "
+  "sn22.87:7.9": "fürchte dich nicht! ",
+  "sn22.87:7.10": "Dein Tod wird kein schlechter sein; dein Verscheiden wird kein schlechtes sein.“‘“ "
 }
