--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -77,5 +77,6 @@
   "sn22.87:8.2": "„Bitte, werte Freunde, helft mir von meiner Liege. ",
   "sn22.87:8.3": "Wie könnte es angehen, dass jemand wie ich auf einem hohen Sitz sitzt, wenn er der Anleitung des Buddha zuhört?“ ",
   "sn22.87:8.4": "„Ja, werter Freund“, antworteten diese Mönche. Und sie halfen ihm von seiner Liege. ",
-  "sn22.87:8.5": "Die Mönche und Nonnen wiederholten, was der Buddha ihnen aufgetragen hatte. "
+  "sn22.87:8.5": "Die Mönche und Nonnen wiederholten, was der Buddha ihnen aufgetragen hatte. ",
+  "sn22.87:8.14": "Vakkali sagte: „Nun, werte Freunde, geht zum Buddha und beugt in meinem Namen euren Kopf zu seinen Füßen. Sagt zu ihm: "
 }
