--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "sn22.87:8.5": "Die Mönche und Nonnen wiederholten, was der Buddha ihnen aufgetragen hatte. ",
   "sn22.87:8.14": "Vakkali sagte: „Nun, werte Freunde, geht zum Buddha und beugt in meinem Namen euren Kopf zu seinen Füßen. Sagt zu ihm: ",
   "sn22.87:8.15": "‚Herr, der Mönch Vakkali ist mitgenommen, leidend, schwer krank. ",
-  "sn22.87:8.16": "Er beugt seinen Kopf zu deinen Füßen.‘ "
+  "sn22.87:8.16": "Er beugt seinen Kopf zu deinen Füßen.‘ ",
+  "sn22.87:8.17": "Und dann sagt: "
 }
