--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.87_translation-de-sabbamitta.json
@@ -82,5 +82,6 @@
   "sn22.87:8.15": "‚Herr, der Mönch Vakkali ist mitgenommen, leidend, schwer krank. ",
   "sn22.87:8.16": "Er beugt seinen Kopf zu deinen Füßen.‘ ",
   "sn22.87:8.17": "Und dann sagt: ",
-  "sn22.87:8.18": "‚Form ist unbeständig. "
+  "sn22.87:8.18": "‚Form ist unbeständig. ",
+  "sn22.87:8.19": "Daran habe ich keinen Zweifel. "
 }
