--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.89:0.3": "Mit Khemaka ",
   "sn22.89:1.1": "Einmal hielten sich mehrere altehrwürdige Mönche und Nonnen bei Kosambi auf, in Ghositas Kloster. ",
   "sn22.89:1.2": "Zu dieser Zeit nun hielt sich der Ehrwürdige Khemaka im Jujube-Kloster auf, und er war mitgenommen, leidend, schwer krank. ",
-  "sn22.89:1.3": "Diese altehrwürdigen Mönche und Nonnen kamen am späten Nachmittag aus ihrer Klausur und wandten sich an den Ehrwürdigen Dāsaka: "
+  "sn22.89:1.3": "Diese altehrwürdigen Mönche und Nonnen kamen am späten Nachmittag aus ihrer Klausur und wandten sich an den Ehrwürdigen Dāsaka: ",
+  "sn22.89:1.4": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: "
 }
