--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.89:1.4": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: ",
   "sn22.89:1.5": "‚Werter Khemaka, die Altehrwürdigen hoffen, ",
   "sn22.89:1.6": "es geht dir leidlich, sie hoffen, du kommst zurecht. Und sie hoffen, dass der Schmerz nachlässt und nicht zunimmt, dass ein Nachlassen erkennbar ist, kein Zunehmen.‘“ ",
-  "sn22.89:1.7": "„Ja, werte Freunde“, antwortete Dāsaka. Er ging zum Ehrwürdigen Khemaka und sagte zu ihm: "
+  "sn22.89:1.7": "„Ja, werte Freunde“, antwortete Dāsaka. Er ging zum Ehrwürdigen Khemaka und sagte zu ihm: ",
+  "sn22.89:1.8": "„Werter Khemaka, die Altehrwürdigen hoffen, "
 }
